--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-flake8==3.9.2
-flake8-docstrings==1.6.0
-pytest==6.2.5
-python-dotenv==0.19.0
-python-telegram-bot==13.7
-requests==2.26.0
+asgiref==3.3.4
+Django==3.2
+djangorestframework==3.12.4
+pytz==2021.1
+sqlparse==0.4.1
